Partial refactor to use local catalog-info.yaml